--- a/02_scripts/04_Fig2_Plots.Rmd
+++ b/02_scripts/04_Fig2_Plots.Rmd
@@ -112,16 +112,17 @@ Es ist ein Mixed model weil wir con festen und von random effects (pro Studie un
 #install.packages("Matrix")
 
 library(lme4)
-library(lmerTest)
+library(emmeans)
 library(Matrix)
 
-interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study),
-                           data = results3)
+interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study), weights = groupsize, data = results3)
 
 summary(interceptonlymodel)
+emmeans(interceptonlymodel, ~1)
 
 
-
+ 
+ 
 ```
 
 ### Hinzufügen eines Level-1 Prädiktors
@@ -134,11 +135,9 @@ Hypothese 1: Die Differenz hängt mit der Fragebogenkombination zusammen.
 results3$questionnaire_pair = paste(results3$measure_1, results3$measure_2)
 results3$questionnaire_pair = factor(paste(results3$measure_1, results3$measure_2))
 
-interceptonlymodel <- lmer(formula = d ~ 1 + questionnaire_pair + (1|Study), weights = groupsize, data = results3)
-summary(interceptonlymodel)
-lmerTest::ls_means(interceptonlymodel, which = "questionnaire_pair")
-
-
+questionnairemodel <- lmer(formula = d ~ -1 + questionnaire_pair + (1|Study), weights = groupsize, data = results3)
+summary(questionnairemodel)
+emmeans(questionnairemodel, specs = "questionnaire_pair")
 ```
 
 # ANOVA
@@ -148,6 +147,9 @@ H0 wird abgelehnt -> es gibt signifikante Unterschiede zwischne den Differenzen 
 
 anova_result <- aov(d ~ questionnaire_pair, data = results3)
 summary(anova_result)
+
+anova(questionnairemodel, interceptonlymodel)
+
 
 ```
 
