--- a/02_scripts/03_Table1_Study_Population_Mia.Rmd
+++ b/02_scripts/03_Table1_Study_Population_Mia.Rmd
@@ -8,7 +8,7 @@ date: "2024-01-10"
 # Datenframe für Table 1 erstellen (age, gender, country, study type)
 
 ### Age
-```{r }
+```{r, echo=FALSE}
 library(readxl)
 library(dplyr)
 library(tidyr)
@@ -59,7 +59,7 @@ result_df_age <- dplyr::bind_rows(result_list)
 
 
 ### gender
-```{r }
+```{r, echo=FALSE}
 
 library(here)
 setwd(here())
@@ -110,7 +110,7 @@ result_df_gender <- dplyr::bind_rows(result_list)
 
 ### country - kategorial
 
-```{r }
+```{r, echo=FALSE}
 library(here)
 setwd(here())
 file_path <- here("01_data", "Datenextraktion - komplett.xlsx")
@@ -163,7 +163,7 @@ result_df_country$Value[86] <- paste("Germany")
 
 
 ### study type - kategorial
-```{r }
+```{r, echo=FALSE}
 library(here)
 setwd(here())
 file_path <- here("01_data", "Datenextraktion - komplett.xlsx")
@@ -208,7 +208,7 @@ result_df_studytype <- dplyr::bind_rows(result_list)
 ```
 
 ### Anzahl Messzeitpunkte - kategorial
-```{r }
+```{r, echo=FALSE}
 library(here)
 setwd(here())
 file_path <- here("01_data", "Datenextraktion - komplett.xlsx")
@@ -267,7 +267,7 @@ result_df_measurementTimePoints[28, "Value"] <- 1
 ```
 
 ### Anzahl Gruppen - kategorial 
-```{r }
+```{r, echo=FALSE}
 library(here)
 setwd(here())
 file_path <- here("01_data", "Datenextraktion - komplett.xlsx")
@@ -318,7 +318,7 @@ result_df_groupsWithinStudy <- dplyr::bind_rows(result_list)
 
 ### Depression: "wieviele Pat hatten einen PROMIS score von über 60?"
 #### Dat short ist falsch..
-```{r }
+```{r, echo=FALSE}
 library(here)
 setwd(here())
 file_path <- here("01_data", "Datenextraktion - komplett.xlsx")
@@ -376,7 +376,7 @@ measurementTimePoints
 groupsWithinStudy
 Fragebogenkombination
 
-```{r }
+```{r, echo=FALSE}
 table1 <- data.frame(
   Variable = character(),
   category = character(),
@@ -404,7 +404,7 @@ table1$Variable[c(4:9, 11:12, 14:15, 17:18, 20, 22, 23:25)] <- NA
 
 ### Tabelle befüllen: age 
 -> ergibt 50.99582
-```{r }
+```{r, echo=FALSE}
 
 #Mittelwert numerisch umwandeln, unique Values nehmen
 result_df_age$Value <- as.numeric(result_df_age$Value)
@@ -434,7 +434,7 @@ table1$amount[1] <- paste(rounded_mean, " (±", rounded_sd, ")", sep = "")
 
 ### Tabelle befüllen: gender 
 -> ergibt 54.05586
-```{r }
+```{r, echo=FALSE}
 library(stringr)
 #Mittelwert numerisch umwandeln, unique Values nehmen
 result_df_gender$Value <- as.numeric(result_df_gender$Value)
@@ -463,7 +463,7 @@ table1$amount[2] <- paste0(rounded_mean, "%")
 
 ### Tabelle befüllen: country 
 -> FRAGE: manche Studien haben in mehren Ländern stattgefunden. Zählt jedes Land einzeln
-```{r }
+```{r, echo=FALSE}
 
 amount_usa <- sum(result_df_country$Value == "USA")
 percent_usa <- (amount_usa / 87) * 100
@@ -520,7 +520,7 @@ table1$amount[9] <- paste(amount_multi, " (", percent_multi, ")", sep = "")
 
 ### Tabelle befüllen: RTC/Clinical Trial obersational or other
 
-```{r }
+```{r, echo=FALSE}
 
 result_df_studytype <- result_df_studytype %>%
   group_by(Study) %>%
@@ -559,7 +559,7 @@ table1$amount[12] <- paste(amount_other, " (", percent_other, ")", sep = "")
 
 
 ### Tabelle befüllen: measurementTimePoints
-```{r }
+```{r, echo=FALSE}
 result_df_measurementTimePoints <- result_df_measurementTimePoints %>%
   group_by(Study) %>%
   summarize(across(everything(), ~ first(.[!is.na(.)]), .names = "{col}"))
@@ -591,7 +591,7 @@ table1$amount[15] <- paste(amount_größerDrei, " (", percent_größerDrei, ")",
 ```
 
 ### Tabelle befüllen: groupsWithinStudy
-```{r }
+```{r, echo=FALSE}
 result_df_groupsWithinStudy <- result_df_groupsWithinStudy %>%
   group_by(Study) %>%
   summarize(across(everything(), ~ first(.[!is.na(.)]), .names = "{col}"))
@@ -628,7 +628,7 @@ The cutoffs used are 0 to 13 for minimal depression, 14 to 19 for mild depressio
 
 
 
-```{r }
+```{r, echo=FALSE}
 
 result_df_mean <- result_df_mean %>%
   mutate(Depression_Status = strsplit(as.character(Depression_Status), ", ")) %>%
@@ -652,7 +652,7 @@ table1$amount[20] <- paste(amount_Depressed, " (", percent_Depressed, ")", sep =
 ### Tabelle befüllen: wie oft welcher Fragebogen genutzt
 
 
-```{r }
+```{r, echo=FALSE}
 
 result_df_mean <- result_df_mean %>%
   mutate(Fragebogenkombination = strsplit(as.character(Fragebogenkombination), ", ")) %>%
