--- a/02_scripts/04_Fig2_Plots.Rmd
+++ b/02_scripts/04_Fig2_Plots.Rmd
@@ -5,7 +5,7 @@ date: "2024-01-10"
 ---
 # Scatterplots
 ## load data
-```{r }
+```{r, echo=FALSE}
 library(readxl)
 library(dplyr)
 library(openxlsx)
@@ -27,11 +27,10 @@ SUBSET_PROMIS <- read.xlsx(file_path) %>% unique()
 
 ```
 
-# Felix' Code
 
 ## Scatter und Bland-Altmann Plots
 
-```{r }
+```{r, echo=FALSE}
 library(Hmisc)
 
 BDIxCESD = inner_join(SUBSET_BDI, SUBSET_CESD, by = c("Study", "Variable")) %>% unique()
@@ -98,10 +97,79 @@ ggplot(results3, aes(x = m, y = d)) + geom_point()+ facet_grid(measure_1 ~ measu
   geom_hline(data = results4, aes(yintercept = wtd_hi), linetype = 2) +
   labs(title = "Weighted")
 
+
+```
+
+```{r, echo=FALSE}
+
+library(ggplot2)
+
+max_groupsize_row <- which.max(results3$groupsize)
+
+# Remove this row to avoid distortion in the plot
+results3_adjusted <- results3[-max_groupsize_row, ]
+
+# Generate the plot without the outlier
+plot <- ggplot(results3_adjusted, aes(x = groupsize, y = d, group = interaction(d > 0.5), color = d > 0.5)) +
+  geom_line() +  # Connect points with lines
+  geom_point() +  # Add points to visualize individual observations
+  scale_color_manual(values = c("red", "blue"),  # Define custom colors for different categories of 'd'
+                     labels = c("d ≤ 0.5", "d > 0.5"),
+                     name = "Difference Category") +
+  geom_hline(yintercept = 0.5, linetype = "dashed", color = "black") +  # Dashed line at d = 0.5
+  labs(
+    x = "Group Size",
+    y = "Difference (d)",
+    title = "Plot of Difference vs. Group Size",
+    subtitle = "Two lines showing trends converging towards d = 0.5",
+    caption = "Outlier with very high group size removed for better visualization."
+  ) +
+  theme_minimal()  # Use a minimalistic theme for a clean plot
+
+# Display the plot
+print(plot)
+
+ggsave("plot_of_difference_vs_group_size.png", plot, width = 10, height = 8, dpi = 300)
+
+
+
+
+
+
+# Load the ggplot2 library for creating visuals
+library(ggplot2)
+
+# Assuming 'results' contains the columns 'd' for differences and 'groupsize' for the size of each group.
+# This visualization explores how the difference 'd' varies with 'groupsize', including smooth trend lines.
+
+# Generate the plot
+plot <- ggplot(results3, aes(x = groupsize, y = d, color = d > 0.5)) +
+  geom_point() +  # Add points to visualize individual observations
+  geom_smooth(aes(group = interaction(d > 0.5)),  # Add smooth lines to show trends
+              method = "loess",  # 'loess' is good for smaller datasets, use 'gam' for larger datasets
+              se = TRUE,  # Display confidence interval around the smooth line
+              color = "black") +  # Specify color of the smooth line if desired
+  scale_color_manual(values = c("red", "blue"),  # Define custom colors for different categories of 'd'
+                     labels = c("d ≤ 0.5", "d > 0.5"),
+                     name = "Difference Category") +
+  geom_hline(yintercept = 0.5, linetype = "dashed", color = "grey") +  # Dashed line at d = 0.5
+  labs(
+    x = "Group Size",
+    y = "Difference (d)",
+    title = "Smoothed Plot of Difference vs. Group Size",
+    subtitle = "Smooth trends showing convergence towards d = 0.5",
+    caption = "Data points are colored based on the category of 'd'. Smooth lines include a confidence interval."
+  ) +
+  theme_minimal()  # Use a minimalistic theme for a clean plot
+
+# Display the plot
+print(plot)
+
+
 ```
 
 ## mean of (absolute) d 
-```{r }
+```{r, echo=FALSE}
 
 d_absolute <- abs(results3$d)
 d_absolute_mean <- mean(d_absolute)
@@ -122,24 +190,25 @@ Wir möchten die Differenz i in Gruppe j aufteilen in Anteile, die auf Unterschi
 Es ist ein Mixed model weil wir von festen und von random effects (pro Studie unterscheiden sich die Differenzen) ausgehen. 
 
 
-```{r }
+```{r, echo=FALSE}
 #install.packages("lme4")
 #install.packages("lmerTest")
 #install.packages("Matrix")
 
 library(lme4)
-library(lmerTest)
-library(Matrix)
+library(sjPlot)
 
-interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study), weights=groupsize,
+# Erstelle das Intercept-Only-Modell
+interceptonlymodel <- lmer(formula = d ~ 1 + (1|Study),
+                           weights = groupsize,
                            data = results3)
 
-## hier weiter mit https://shiny.psy.lmu.de/tutorials/lineare-gemischte-modelle-linear-mixed-models---lmm.html#intro und notion 
+# Zeige die Zusammenfassung des Modells an
 summary(interceptonlymodel)
 
-#install.packages("sjPlot")
-library(sjPlot)
-plot_model(model = interceptonlymodel, type = 'pred', terms = 'Study')
+# Plotte das Modell
+#plot_model(model = interceptonlymodel, type = 'pred', terms = 'Study')
+
 
 ```
 
@@ -149,7 +218,8 @@ Wir wollen herausfinden, woran es liegen könnte, dass die Studien unterschiedli
 Hypothese 1: Die Differenz hängt mit der Fragebogenkombination zusammen.
 
 
-```{r }
+```{r, echo=FALSE}
+
 # install.packages("knitr")
 # install.packages("kableExtra")
 
@@ -169,7 +239,7 @@ lmerTest::ls_means(interceptonlymodel, which = "questionnaire_pair")
 # ANOVA
 
 H0 wird abgelehnt -> es gibt signifikante Unterschiede zwischne den Differenzen der Fragebögen
-```{r }
+```{r, echo=FALSE}
 
 anova_result <- aov(d ~ questionnaire_pair, data = results3)
 summary(anova_result)
@@ -177,7 +247,7 @@ summary(anova_result)
 ```
 # Forest plot 
 
-```{r }
+```{r, echo=FALSE}
 
 ## load up the packages we will need: 
 library(tidyverse)
@@ -235,821 +305,28 @@ file_path <- "../04_results/forest_plot.png"
 # Save the plot
 ggsave(file_path, plot, width = 10, height = 8)
 
-
 plot
+
+
+
+
 ```
 
 # save table 2
-```{r }
+```{r, echo=FALSE}
+
+lmme <- data
+lmme$p.value <- ifelse(lmme$p.value < 0.001, "p < 0.001", paste("p =", lmme$p.value))
+lmme$Estimate <- round(lmme$Estimate, 2)
+lmme$Std.Error <- round(lmme$Std.Error, 2)
+lmme$lower <- round(lmme$lower, 2)
+lmme$upper <- round(lmme$upper, 2)
 
 
-```
-
-
-## Scatterplots einzeln über alle Fragebogenkombinationen
-
-```{r }
-library(ggplot2)
-#install.packages("hrbrthemes")
-library(hrbrthemes)
-```
-
-
-#### BDIxCESD
-```{r }
-BDIxCESD$groupsize.y <- as.numeric(as.character(BDIxCESD$groupsize.y)) 
-BDIxCESD_plot<- ggplot(BDIxCESD, aes(x = `BDI.-.PROMIS.Skala`, y = `CESD.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
-  theme_ipsum()
-```
-
-#### BDIxHADS
-```{r }
-BDIxHADS$groupsize.y <- as.numeric(as.character(BDIxHADS$groupsize.y))  
-BDIxHADS_plot<- ggplot(BDIxHADS, aes(x = `BDI.-.PROMIS.Skala`, y = `HADS.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +  # Hier wird der Name der Punktgröße geändert
-  theme_ipsum()
-```
-  
-#### BDIxPHQ
-```{r }
-BDIxPHQ$groupsize.y <- as.numeric(as.character(BDIxPHQ$groupsize.y))  
-BDIxPHQ_plot<- ggplot(BDIxPHQ, aes(x = `BDI.-.PROMIS.Skala`, y = `PHQ.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") + 
-  theme_ipsum()
-```
-
-#### BDIxPROMIS
-```{r }
-BDIxPROMIS$groupsize.y <- as.numeric(as.character(BDIxPROMIS$groupsize.y))  
-BDIxPROMIS_plot <- ggplot(BDIxPROMIS, aes(x = `BDI.-.PROMIS.Skala`, y = `PROMIS`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +  
-  theme_ipsum()
-```
-
-#### CESDxHADS
-```{r }
-CESDxHADS$groupsize.y <- as.numeric(as.character(CESDxHADS$groupsize.y))  
-CESDxHADS_plot <- ggplot(CESDxHADS, aes(x = `CESD.-.PROMIS.Skala`, y = `HADS.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +
-  theme_ipsum()
-```
-
-#### CESDxPHQ
-```{r }
-CESDxPHQ$groupsize.y <- as.numeric(as.character(CESDxPHQ$groupsize.y))  
-CESDxPHQ_plot <- ggplot(CESDxPHQ, aes(x = `CESD.-.PROMIS.Skala`, y = `PHQ.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +
-  theme_ipsum()
-```
-
-#### PHQxPROMIS
-```{r }
-PHQxPROMIS$groupsize.y <- as.numeric(as.character(PHQxPROMIS$groupsize.y))  
-PHQxPROMIS_plot <- ggplot(PHQxPROMIS, aes(x = `PHQ.-.PROMIS.Skala`, y = `PROMIS`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +
-  theme_ipsum()
-```
-
-#### HADSxPHQ
-```{r }
-HADSxPHQ$groupsize.y <- as.numeric(as.character(HADSxPHQ$groupsize.y))  
-HADSxPHQ_plot <- ggplot(HADSxPHQ, aes(x = `HADS.-.PROMIS.Skala`, y = `PHQ.-.PROMIS.Skala`)) + 
-  geom_point(aes(size = groupsize.y)) +
-  geom_smooth(method = "lm", color = "red", fill = "#69b3a2", se = TRUE) +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(size = "Gruppengröße") +
-  theme_ipsum()
-```
-
-### Facetted Plot als Grid erstellen
-```{r }
-# einen Datensatz aus allen erstellen mit Wert 1 und Wert 2 und einer Zeile der Fragebogenkombination 
-
-BDIxCESD_short <- BDIxCESD %>%
-  mutate(`Wert 1` = `BDI.-.PROMIS.Skala`,
-         `Wert 2` = `CESD.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "BDIxCESD")
-
-
-BDIxHADS_short <- BDIxHADS %>%
-  mutate(`Wert 1` = `BDI.-.PROMIS.Skala`,
-         `Wert 2` = `HADS.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "BDIxHADS")
-
-
-BDIxPHQ_short <- BDIxPHQ %>%
-  mutate(`Wert 1` = `BDI.-.PROMIS.Skala`,
-         `Wert 2` = `PHQ.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "BDIxPHQ")
-
-
-BDIxPROMIS_short <- BDIxPROMIS %>%
-  mutate(`Wert 1` = `BDI.-.PROMIS.Skala`,
-         `Wert 2` = `-.PROMIS.Skala`,
-         `Fragebogenkombination` = "BDIxPROMIS")
-
-
-CESDxHADS_short <- CESDxHADS %>%
-  mutate(`Wert 1` = `CESD.-.PROMIS.Skala`,
-         `Wert 2` = `HADS.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "CESDxHADS")
-
-
-CESDxPHQ_short  <- CESDxPHQ %>%
-  mutate(`Wert 1` = `CESD.-.PROMIS.Skala`,
-         `Wert 2` = `PHQ.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "CESDxPHQ")
-
-
-CESDxPROMIS_short  <- CESDxPROMIS %>%
-  mutate(`Wert 1` = `CESD.-.PROMIS.Skala`,
-         `Wert 2` = `-.PROMIS.Skala`,
-         `Fragebogenkombination` = "CESDxPROMIS")
-
-
-HADSxPHQ_short  <- HADSxPHQ %>%
-  mutate(`Wert 1` = `HADS.-.PROMIS.Skala`,
-         `Wert 2` = `PHQ.-.PROMIS.Skala`,
-         `Fragebogenkombination` = "HADSxPHQ")
-
-
-HADSxPROMIS_short <- HADSxPROMIS %>%
-  mutate(`Wert 1` = `HADS.-.PROMIS.Skala`,
-         `Wert 2` = `-.PROMIS.Skala`,
-         `Fragebogenkombination` = "HADSxPROMIS")
-
-
-PHQxPROMIS_short <- PHQxPROMIS %>%
-  mutate(`Wert 1` = `PHQ.-.PROMIS.Skala`,
-         `Wert 2` = `-.PROMIS.Skala`,
-         `Fragebogenkombination` = "PHQxPROMIS")
-
-# datensätze verbinden, um sie als faceted plot aus einer Tabelle plotten zu können
-
-BDIxCESD_short_selected <- BDIxCESD_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-BDIxHADS_short_selected <- BDIxHADS_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-BDIxPHQ_short_selected <- BDIxPHQ_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-BDIxPROMIS_short_selected <- BDIxPROMIS_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-CESDxHADS_short_selected <- CESDxHADS_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-CESDxPHQ_short_selected <- CESDxPHQ_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-PHQxPROMIS_short_selected <- PHQxPROMIS_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-HADSxPHQ_short_selected <- HADSxPHQ_short %>%
-  select("Wert 1", "Wert 2", "Fragebogenkombination", "groupsize.y")
-
-
-
-# Datensätze untereinander verbinden (join)
-verbundener_datensatz <- bind_rows(
-  BDIxHADS_short_selected,
-  BDIxCESD_short_selected,
-  BDIxPHQ_short_selected,
-  BDIxPROMIS_short_selected,
-  CESDxHADS_short_selected,
-  CESDxPHQ_short_selected,
-  PHQxPROMIS_short_selected,
-  HADSxPHQ_short_selected
-)
-
-# Ersetze "nicht berichtet (!)" durch NA in allen Spalten
-verbundener_datensatz <- verbundener_datensatz %>%
-  mutate_all(~ ifelse(. == "nicht berichtet (!)", NA, .)) %>%
-  rename(Wert1 = "Wert 1", Wert2 = "Wert 2")
-
-# ggplot erstellen
-
-
-sp <- ggplot(data = verbundener_datensatz, aes(x = Wert2, y = Wert1)) +
-  geom_point(aes(size = ifelse(is.na(groupsize.y), 100, groupsize.y), color = ifelse(is.na(groupsize.y), "blue", "black"))) +
-  geom_smooth(method = "lm", color = "red", size = 0.5, fill = "#69b3a2", se = TRUE) +
-  labs(size = "Groupsize") +
-  scale_size_continuous(range = c(0, 5), breaks = seq(0, 4000, by = 1000)) +
-  scale_color_identity() +
-  xlim(40, 90) +
-  ylim(40, 90) +
-  labs(x = "First Value of combination", y = "Second Value of combination")
-
-
-
-sp
-
-faceted_scatterplot <- sp + facet_wrap( ~ Fragebogenkombination, ncol = 3)
-
-file_path <- "../04_results/faceted_scatterplot.png"
-ggsave(file_path, faceted_scatterplot, width = 10, height = 6, units = "in")
-
-
-
+#install.packages("writexl")
+library(writexl)
+file_path <- "../04_results/lmme.xlsx"
+write.xlsx(lmme, file_path, rowNames = FALSE)
 
 ```
 
-
-# Blant Altman Plots
-## Version 1 mit blandr.draw Funktion
-### Blant Altman Plot einzeln 
-```{r }
-#install.packages("blandr")
-library(blandr)
-
-#BDIxCESD
-BDIxCESD_BA_plot <- blandr.draw(BDIxCESD$'BDI.-.PROMIS.Skala', BDIxCESD$'CESD.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "BDIxCESD") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# BDIxHADS
-BDIxHADS_BA_plot <- blandr.draw(BDIxHADS$'BDI.-.PROMIS.Skala', BDIxHADS$'HADS.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "BDIxHADS") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# BDIxPHQ
-BDIxPHQ_BA_plot <- blandr.draw(BDIxPHQ$'BDI.-.PROMIS.Skala', BDIxPHQ$'PHQ.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "BDIxPHQ") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# BDIxPROMIS
-BDIxPROMIS_BA_plot <- blandr.draw(BDIxPROMIS$'BDI.-.PROMIS.Skala', BDIxPROMIS$'-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "BDIxPROMIS") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-
-# CESDxHADS
-CESDxHADS_BA_plot <- blandr.draw(CESDxHADS$'CESD.-.PROMIS.Skala', CESDxHADS$'HADS.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "CESDxHADS") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# CESDxPHQ
-CESDxPHQ_BA_plot <- blandr.draw(CESDxPHQ$'CESD.-.PROMIS.Skala', CESDxPHQ$'PHQ.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "CESDxPHQ") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# CESDxPROMIS
-#CESDxPROMIS_BA_plot <- blandr.draw(CESDxPROMIS$'CESD.-.PROMIS.Skala', CESDxPROMIS$'-.PROMIS.Skala') +
-#  theme(text = element_text(size = 6)) +
-#  labs(title = "CESDxPROMIS") +
-#  xlim(40, 80) +
-#  ylim(-15, 25)
-
-
-# HADSxPHQ  
-HADSxPHQ_BA_plot <- blandr.draw(HADSxPHQ$'HADS.-.PROMIS.Skala', HADSxPHQ$'PHQ.-.PROMIS.Skala') +
-  theme(text = element_text(size = 6)) +
-  labs(title = "HADSxPHQ") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-# PHQxPROMIS
-PHQxPROMIS_BA_plot <- blandr.draw(PHQxPROMIS$'PHQ.-.PROMIS.Skala', PHQxPROMIS$'-.PROMIS.Skala',
-                                  x.plot.mode = 4) +
-  theme(text = element_text(size = 6)) +
-  labs(title = "PHQxPROMIS") +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-
-```
-
-
-### Blant Altman Plot alle
-```{r }
-library(gridExtra)
-
-Blant_plot<- suppressWarnings({
-  BDIxCESD_BA_plot <- blandr.draw(BDIxCESD$'BDI.-.PROMIS.Skala', BDIxCESD$'CESD.-.PROMIS.Skala')
-  BDIxCESD_BA_plot <- BDIxCESD_BA_plot +
-    geom_point(size = 0.1) +
-    scale_size(range = c(0.1, 1.0)) +  
-    theme(text = element_text(size = 6)) +
-    
-    labs(title = "BDIxCESD") +
-    xlim(40, 80) +
-    ylim(-15, 25)
-
-  BDIxHADS_BA_plot 
-  BDIxPHQ_BA_plot
-  CESDxHADS_BA_plot 
-  CESDxPHQ_BA_plot
-  PHQxPROMIS_BA_plot
-  HADSxPHQ_BA_plot 
-
-  grid.arrange(BDIxCESD_BA_plot, BDIxHADS_BA_plot, BDIxPHQ_BA_plot, CESDxHADS_BA_plot, CESDxPHQ_BA_plot, PHQxPROMIS_BA_plot,HADSxPHQ_BA_plot, nrow = 2)
-})
-
-
-```
-
-
-## Version 2: händisch Plots bauen um weighted means einbeziehen zu können
-### Blant Altman Plots mit weighted means
-#### BDIxCESD
-```{r }
-
-# der weighted mean ist nur eine Zahl weil er über alle Werte und Weights mittelt:
-BDIxCESD$weigh.mean.BDI <- weighted.mean(BDIxCESD$'BDI.-.PROMIS.Skala', BDIxCESD$groupsize.y)
-BDIxCESD$weigh.mean.CESD <- weighted.mean(BDIxCESD$'CESD.-.PROMIS.Skala', BDIxCESD$groupsize.y)
-BDIxCESD$weigh.diff <- BDIxCESD$weigh.mean.BDI - BDIxCESD$weigh.mean.CESD
-
-#create a new column for average measurement
-BDIxCESD$avg <- rowMeans(BDIxCESD[c('BDI.-.PROMIS.Skala', 'CESD.-.PROMIS.Skala')], na.rm = TRUE)
-
-#create a new column for differences
-BDIxCESD$diff <- BDIxCESD$'BDI.-.PROMIS.Skala' - BDIxCESD$'CESD.-.PROMIS.Skala'
-
-#find an average difference
-mean_diff <- mean(BDIxCESD$diff)
-mean_diff_bdixcesd <- mean_diff
-
-#find lower 95% confidence interval limits
-lower <- mean_diff - 1.96*sd(BDIxCESD$diff)
-
-# find upper 95% confidence interval limits
-upper <- mean_diff + 1.96*sd(BDIxCESD$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-BDIxCESD_BA_plot_weighted <- ggplot(BDIxCESD, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("BDIxCESD") +
-  ylab("Difference Between Instruments") +
-  xlab("Average")+
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +  xlim(40, 80) +
-  ylim(-15, 25) 
-
-
-```
-
-
-####BDIxHADS
-```{r }
-
-# Calculate weighted means
-weigh.mean.BDI <- weighted.mean(BDIxHADS$'BDI.-.PROMIS.Skala', BDIxHADS$groupsize.y)
-weigh.mean.HADS <- weighted.mean(BDIxHADS$'HADS.-.PROMIS.Skala', BDIxHADS$groupsize.y)
-weigh.diff <- weigh.mean.BDI - weigh.mean.HADS
-
-# Create a new column for average measurement
-BDIxHADS$avg <- rowMeans(BDIxHADS[c('BDI.-.PROMIS.Skala', 'HADS.-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-BDIxHADS$diff <- BDIxHADS$'BDI.-.PROMIS.Skala' - BDIxHADS$'HADS.-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(BDIxHADS$diff)
-mean_diff_bdixhads <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(BDIxHADS$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(BDIxHADS$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-BDIxHADS_BA_plot_weighted <- ggplot(BDIxHADS, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("BDIxHADS") +
-  ylab("Difference Between Instruments") +
-  xlab("Average") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-```
-####BDIxPHQ
-```{r }
-# Calculate weighted means
-weigh.mean.BDI <- weighted.mean(BDIxPHQ$'BDI.-.PROMIS.Skala', BDIxPHQ$groupsize.y)
-weigh.mean.PHQ <- weighted.mean(BDIxPHQ$'PHQ.-.PROMIS.Skala', BDIxPHQ$groupsize.y)
-weigh.diff <- weigh.mean.BDI - weigh.mean.PHQ
-
-# Create a new column for average measurement
-BDIxPHQ$avg <- rowMeans(BDIxPHQ[c('BDI.-.PROMIS.Skala', 'PHQ.-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-BDIxPHQ$diff <- BDIxPHQ$'BDI.-.PROMIS.Skala' - BDIxPHQ$'PHQ.-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(BDIxPHQ$diff)
-mean_diff_bdixphq <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(BDIxPHQ$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(BDIxPHQ$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-BDIxPHQ_BA_plot_weighted <- ggplot(BDIxPHQ, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("BDIxPHQ") +
-  ylab("Difference Between Instruments") +
-  xlab("Average") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-```
-####BDIxPROMIS
-```{r }
-
-# Assuming your data frame is named BDIxPROMIS
-
-# Calculate weighted means
-weigh.mean.BDI <- weighted.mean(BDIxPROMIS$'BDI.-.PROMIS.Skala', BDIxPROMIS$groupsize.y)
-weigh.mean.PROMIS <- weighted.mean(BDIxPROMIS$'-.PROMIS', BDIxPROMIS$groupsize.y)
-weigh.diff <- weigh.mean.BDI - weigh.mean.PROMIS
-
-# Create a new column for average measurement
-BDIxPROMIS$avg <- rowMeans(BDIxPROMIS[c('BDI.-.PROMIS.Skala', '-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-BDIxPROMIS$diff <- BDIxPROMIS$'BDI.-.PROMIS.Skala' - BDIxPROMIS$'-.PROMIS'
-
-# Find the average difference
-mean_diff <- mean(BDIxPROMIS$diff)
-mean_diff_bdixpromis <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(BDIxPROMIS$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(BDIxPROMIS$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-BDIxPROMIS_BA_plot_weighted <- ggplot(BDIxPROMIS, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("BDIxPROMIS") +
-  ylab("Difference Between Instruments") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-
-
-```
-
-
-####CESDxHADS
-```{r }
-
-# Assuming CESDxHADS contains CESD and HADS scores
-
-# Calculate weighted means
-weigh.mean.CESD <- weighted.mean(CESDxHADS$'CESD.-.PROMIS.Skala', CESDxHADS$groupsize.y)
-weigh.mean.HADS <- weighted.mean(CESDxHADS$'HADS.-.PROMIS.Skala', CESDxHADS$groupsize.y)
-weigh.diff <- weigh.mean.CESD - weigh.mean.HADS
-
-# Create a new column for average measurement
-CESDxHADS$avg <- rowMeans(CESDxHADS[c('CESD.-.PROMIS.Skala', 'HADS.-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-CESDxHADS$diff <- CESDxHADS$'CESD.-.PROMIS.Skala' - CESDxHADS$'HADS.-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(CESDxHADS$diff)
-mean_diff_cesdxhads <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(CESDxHADS$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(CESDxHADS$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-CESDxHADS_BA_plot_weighted <- ggplot(CESDxHADS, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("CESDxHADS") +
-  ylab("Difference Between Instruments") +
-  xlab("Average") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-
-```
-####CESDxPHQ
-```{r }
-
-# Assuming your data frame is named CESDxPHQ
-
-# Calculate weighted means
-weigh.mean.CESD <- weighted.mean(CESDxPHQ$'CESD.-.PROMIS.Skala', CESDxPHQ$groupsize.y)
-weigh.mean.PHQ <- weighted.mean(CESDxPHQ$'PHQ.-.PROMIS.Skala', CESDxPHQ$groupsize.y)
-weigh.diff <- weigh.mean.CESD - weigh.mean.PHQ
-
-# Create a new column for average measurement
-CESDxPHQ$avg <- rowMeans(CESDxPHQ[c('CESD.-.PROMIS.Skala', 'PHQ.-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-CESDxPHQ$diff <- CESDxPHQ$'CESD.-.PROMIS.Skala' - CESDxPHQ$'PHQ.-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(CESDxPHQ$diff)
-mean_diff_cesdxphq <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(CESDxPHQ$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(CESDxPHQ$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-CESDxPHQ_BA_plot_weighted <- ggplot(CESDxPHQ, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("CESDxPHQ") +
-  ylab("Difference Between Instruments") +
-  xlab("Average") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-
-```
-#### PHQxPROMIS
-```{r }
-# Assuming your data frame is named PHQxPROMIS
-
-# Calculate weighted means
-weigh.mean.PHQ <- weighted.mean(PHQxPROMIS$'PHQ.-.PROMIS.Skala', PHQxPROMIS$groupsize.y)
-weigh.mean.PROMIS <- weighted.mean(PHQxPROMIS$'-.PROMIS.Skala', PHQxPROMIS$groupsize.y)
-weigh.diff <- weigh.mean.PHQ - weigh.mean.PROMIS
-
-# Create a new column for average measurement
-PHQxPROMIS$avg <- rowMeans(PHQxPROMIS[c('PHQ.-.PROMIS.Skala', '-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-PHQxPROMIS$diff <- PHQxPROMIS$'PHQ.-.PROMIS.Skala' - PHQxPROMIS$'-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(PHQxPROMIS$diff)
-mean_diff_phqxpromis <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(PHQxPROMIS$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(PHQxPROMIS$diff)
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-PHQxPROMIS_BA_plot_weighted <- ggplot(PHQxPROMIS, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("PHQxPROMIS") +
-  ylab("Difference Between Instruments") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-```
-####HADSxPHQ
-```{r }
-# Assuming your data frame is named HADSxPHQ
-
-# Calculate weighted means
-weigh.mean.HADS <- weighted.mean(HADSxPHQ$'HADS.-.PROMIS.Skala', HADSxPHQ$groupsize.y)
-weigh.mean.PHQ <- weighted.mean(HADSxPHQ$'PHQ.-.PROMIS.Skala', HADSxPHQ$groupsize.y)
-weigh.diff <- weigh.mean.HADS - weigh.mean.PHQ
-
-# Create a new column for average measurement
-HADSxPHQ$avg <- rowMeans(HADSxPHQ[c('HADS.-.PROMIS.Skala', 'PHQ.-.PROMIS.Skala')], na.rm = TRUE)
-
-# Create a new column for differences
-HADSxPHQ$diff <- HADSxPHQ$'HADS.-.PROMIS.Skala' - HADSxPHQ$'PHQ.-.PROMIS.Skala'
-
-# Find the average difference
-mean_diff <- mean(HADSxPHQ$diff)
-mean_diff_hadsxphq <- mean_diff
-
-# Find lower 95% confidence interval limits
-lower <- mean_diff - 1.96 * sd(HADSxPHQ$diff)
-
-# Find upper 95% confidence interval limits
-upper <- mean_diff + 1.96 * sd(HADSxPHQ$diff)
-
-
-
-# Create the Bland-Altman Plot
-library(ggplot2)
-
-# ... (your existing data and calculations)
-
-# Create Bland-Altman Plot
-HADSxPHQ_BA_plot_weighted <- ggplot(HADSxPHQ, aes(x = avg, y = diff)) +
-  geom_point(size=1) +
-  geom_hline(yintercept = mean_diff, linetype="dashed", lwd=0.5) +
-  geom_hline(yintercept = lower, color = "red", linetype="dashed") +
-  geom_hline(yintercept = upper, color = "red", linetype="dashed") +
-  geom_hline(yintercept = 0, color = "blue") +
-  ggtitle("HADSxPHQ") +
-  ylab("Difference Between Instruments") +
-  xlab("Average") +
-  theme_bw() +
-  theme(
-    text = element_text(size = 8),  
-    axis.title = element_text(size = 6),
-    axis.text = element_text(size = 8),
-    plot.title = element_text(size = 8) 
-  ) +
-  xlim(40, 80) +
-  ylim(-15, 25)
-
-```
-
-### Grid erstellen
-```{r }
-library(gridExtra)
-
-Blant_plot_weighted <- suppressWarnings({
-  BDIxCESD_BA_plot_weighted
-  BDIxHADS_BA_plot_weighted 
-  BDIxPHQ_BA_plot_weighted
-  BDIxPROMIS_BA_plot_weighted
-  CESDxHADS_BA_plot_weighted
-  CESDxPHQ_BA_plot_weighted
-  PHQxPROMIS_BA_plot_weighted
-  HADSxPHQ_BA_plot_weighted 
-
-  grid.arrange(BDIxCESD_BA_plot_weighted, BDIxHADS_BA_plot_weighted, BDIxPHQ_BA_plot_weighted, BDIxPROMIS_BA_plot_weighted, CESDxHADS_BA_plot_weighted, CESDxPHQ_BA_plot_weighted, PHQxPROMIS_BA_plot_weighted,HADSxPHQ_BA_plot_weighted, nrow = 2)
-})
-
-
-
-file_path <- "../04_results/Blant_plot_weighted.png"
-ggsave(file_path, Blant_plot_weighted, width = 10, height = 6, units = "in")
-
-
-
-```
-## Mean diff und sd über alle berrechnen
-```{r }
-overall_mean <- mean(mean_diff_bdixcesd, mean_diff_bdixhads, mean_diff_bdixphq, mean_diff_bdixpromis, mean_diff_cesdxhads, mean_diff_cesdxphq, mean_diff_phqxpromis, mean_diff_hadsxphq)
-
-
-sd_bdi_BDIxCESD <- sd(BDIxCESD$`BDI.-.PROMIS.Skala`)
-sd_bdi_BDIxHADS <- sd(BDIxHADS$`BDI.-.PROMIS.Skala`)
-sd_bdi_BDIxPHQ <- sd(BDIxPHQ$`BDI.-.PROMIS.Skala`)
-sd_bdi_BDIxPROMIS <- sd(BDIxPROMIS$`BDI.-.PROMIS.Skala`)
-
-sd_cesd_BDIxCESD <- sd(BDIxCESD$`CESD.-.PROMIS.Skala`)
-sd_hads_BDIxHADS <- sd(BDIxHADS$`HADS.-.PROMIS.Skala`)
-sd_phq_BDIxPHQ <- sd(BDIxPHQ$`PHQ.-.PROMIS.Skala`)
-sd_promis_BDIxPROMIS <- sd(BDIxPROMIS$`PROMIS`)
-
-sd_cesd_CESDxHADS <- sd(CESDxHADS$`CESD.-.PROMIS.Skala`)
-sd_cesd_CESDxPHQ <- sd(CESDxPHQ$`CESD.-.PROMIS.Skala`)
-
-sd_hads_CESDxHADS <- sd(CESDxHADS$`HADS.-.PROMIS.Skala`)
-sd_phq_CESDxPHQ <- sd(CESDxPHQ$`PHQ.-.PROMIS.Skala`)
-
-sd_phq_PHQxPROMIS <- sd(PHQxPROMIS$`PHQ.-.PROMIS.Skala`)
-
-sd_promis_PHQxPROMIS <- sd(PHQxPROMIS$`PROMIS`)
-
-sd_hads_HADSxPHQ <- sd(HADSxPHQ$`HADS.-.PROMIS.Skala`)
-
-sd_phq_HADSxPHQ <- sd(HADSxPHQ$`PHQ.-.PROMIS.Skala`)
-
-standardabweichungen <- c(
-  sd_bdi_BDIxCESD, sd_bdi_BDIxHADS, sd_bdi_BDIxPHQ, sd_bdi_BDIxPROMIS,
-  sd_cesd_BDIxCESD, sd_hads_BDIxHADS, sd_phq_BDIxPHQ, sd_promis_BDIxPROMIS,
-  sd_cesd_CESDxHADS, sd_cesd_CESDxPHQ,
-  sd_hads_CESDxHADS, sd_phq_CESDxPHQ,
-  sd_phq_PHQxPROMIS, sd_promis_PHQxPROMIS,
-  sd_hads_HADSxPHQ, sd_phq_HADSxPHQ
-)
-
-mean_standardabweichungen <- mean(standardabweichungen)
-
-print(mean_standardabweichungen)
-
-
-
-```
